--- a/src/main/resources/docgen/templates/msmarco-v2-passage.template
+++ b/src/main/resources/docgen/templates/msmarco-v2-passage.template
@@ -1,10 +1,11 @@
 # Anserini: Regressions for [MS MARCO (V2) Passage Ranking](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)
 
-This page documents regression experiments for passage ranking on the MS MARCO (V2) passage corpus using the dev2 queries, which is integrated into Anserini's regression testing framework.
+This page describes regression experiments for passage ranking on the MS MARCO (V2) passage corpus using the dev queries, which is integrated into Anserini's regression testing framework.
+Here, we cover bag-of-words baselines.
 For more complete instructions on how to run end-to-end experiments, refer to [this page](experiments-msmarco-v2.md).
 
-The exact configurations for these regressions are stored in [this YAML file](../src/main/resources/regression/msmarco-v2-passage-dev2.yaml).
-Note that this page is automatically generated from [this template](../src/main/resources/docgen/templates/msmarco-v2-passage-dev2.template) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
+The exact configurations for these regressions are stored in [this YAML file](../src/main/resources/regression/msmarco-v2-passage.yaml).
+Note that this page is automatically generated from [this template](../src/main/resources/docgen/templates/msmarco-v2-passage.template) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
 
 ## Indexing
 
@@ -22,7 +23,7 @@ For additional details, see explanation of [common indexing options](common-inde
 ## Retrieval
 
 Topics and qrels are stored in [`src/main/resources/topics-and-qrels/`](../src/main/resources/topics-and-qrels/).
-These regression experiments use the [dev queries](../src/main/resources/topics-and-qrels/topics.msmarco-v2-passage.dev.txt).
+These regression experiments use the [dev queries](../src/main/resources/topics-and-qrels/topics.msmarco-v2-passage.dev.txt) and the [dev2 queries](../src/main/resources/topics-and-qrels/topics.msmarco-v2-passage.dev2.txt).
 
 After indexing has completed, you should be able to perform retrieval as follows:
 
