--- a/src/main/resources/regression/msmarco-v2-passage-unicoil-noexp-0shot.yaml
+++ b/src/main/resources/regression/msmarco-v2-passage-unicoil-noexp-0shot.yaml
@@ -1,5 +1,5 @@
 ---
-name: msmarco-v2-passage-dev
+name: msmarco-v2-passage-unicoil-noexp-0shot
 index_command: target/appassembler/bin/IndexCollection
 index_utils_command: target/appassembler/bin/IndexReaderUtils
 search_command: target/appassembler/bin/SearchCollection
@@ -7,13 +7,12 @@ topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 index_root:
 ranking_root:
-collection: MsMarcoV2PassageCollection
+collection: JsonVectorCollection
 generator: DefaultLuceneDocumentGenerator
 threads: 18
 index_options:
-  - -storePositions
-  - -storeDocvectors
-  - -storeRaw
+  - -impact
+  - -pretokenized
 topic_reader: TsvInt
 evals:
   - command: tools/eval/trec_eval.9.0.4/trec_eval
@@ -23,7 +22,7 @@ evals:
       - -c
     separator: "\t"
     parse_index: 2
-    metric: map
+    metric: MAP
     metric_precision: 4
     can_combine: true
   - command: tools/eval/trec_eval.9.0.4/trec_eval
@@ -58,71 +57,35 @@ input_roots:
   - /tuna1/      # on tuna
   - /store/      # on orca
   - /scratch2/   # on damiano
-input: collections/msmarco/msmarco_v2_passage
-index_path: indexes/lucene-index.msmarco-v2-passage.pos+docvectors+raw
+input: collections/msmarco/msmarco-passage-v2-unicoil-noexp-0shot-b8
+index_path: indexes/lucene-index.msmarco-v2-passage-unicoil-noexp-0shot
 index_stats:
   documents: 138364198
-  documents (non-empty): 138364197
-  total terms: 4673266762
+  documents (non-empty): 138364198
+  total terms: 411330032512
 topics:
   - name: "[MS MARCO V2 Passage: Dev](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
-    path: topics.msmarco-v2-passage.dev.txt
+    path: topics.msmarco-v2-passage.dev.unicoil-noexp.0shot.tsv.gz
     qrel: qrels.msmarco-v2-passage.dev.txt
+  - name: "[MS MARCO V2 Passage: Dev](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
+    path: topics.msmarco-v2-passage.dev2.unicoil-noexp.0shot.tsv.gz
+    qrel: qrels.msmarco-v2-passage.dev2.txt
 models:
-  - name: bm25-default
-    display: BM25 (default)
+  - name: unicoil-noexp-0shot
+    display: uniCOIL (no expansion, zero-shot)
     params:
-      - -bm25
+      - -impact
+      - -pretokenized
     results:
-      map:
-        - 0.0709
+      MAP:
+        - 0.1333
+        - 0.1374
       MRR@100:
-        - 0.0719
+        - 0.1342
+        - 0.1385
       R@100:
-        - 0.3397
+        - 0.4976
+        - 0.5217
       R@1000:
-        - 0.5733
-  - name: bm25-default+rm3
-    display: +RM3
-    params:
-      - -bm25
-      - -rm3
-    results:
-      map:
-        - 0.0611
-      MRR@100:
-        - 0.0619
-      R@100:
-        - 0.3377
-      R@1000:
-        - 0.5933
-  - name: bm25-default+ax
-    display: +Ax
-    params:
-      - -bm25
-      - -axiom
-      - -axiom.deterministic
-      - -rerankCutoff 20
-    results:
-      map:
-        - 0.0592
-      MRR@100:
-        - 0.0601
-      R@100:
-        - 0.3482
-      R@1000:
-        - 0.6064
-  - name: bm25-default+prf
-    display: +PRF
-    params:
-      - -bm25
-      - -bm25prf
-    results:
-      map:
-        - 0.0595
-      MRR@100:
-        - 0.0607
-      R@100:
-        - 0.3495
-      R@1000:
-        - 0.5968
+        - 0.7010
+        - 0.7114
