Fix dead link to data disks 4 and 5

--- a/src/main/resources/docgen/templates/robust04.template
+++ b/src/main/resources/docgen/templates/robust04.template
@@ -12,7 +12,7 @@ Typical indexing command:
 ${index_cmds}
 ```
 
-The directory `/path/to/disk45/` should be the root directory of [TREC Disks 4 &amp; 5](https://trec.nist.gov/data_disks.html); inside each there should be subdirectories like `ft`, `fr94`.
+The directory `/path/to/disk45/` should be the root directory of [TREC Disks 4 &amp; 5](https://trec.nist.gov/data/cd45/index.html); inside each there should be subdirectories like `ft`, `fr94`.
 Note that Anserini ignores the `cr` folder when indexing, which is the standard configuration.
 
 For additional details, see explanation of [common indexing options](common-indexing-options.md).
