--- a/src/main/resources/docgen/templates/msmarco-doc-per-passage-v2.template
+++ b/src/main/resources/docgen/templates/msmarco-doc-per-passage-v2.template
@@ -60,8 +60,7 @@ This lets us measure R@100 and R@1000; the latter is particularly important when
 Beware, an official MS MARCO document ranking task leaderboard submission comprises only 100 hits per query.
 See [this page](experiments-msmarco-doc-leaderboard.md) for details on Anserini baseline runs that were submitted to the official leaderboard.
 
-The MaxP passage retrieval functionality is only available in `SearchCollection`; we use a simple script to convert the output back into the MS MARCO format for evaluation.
-
+The MaxP passage retrieval functionality is available in `SearchCollection`.
 To generate an MS MARCO submission with the BM25 default parameters, corresponding to "BM25 (default)" above:
 
 ```bash
@@ -82,6 +81,8 @@ QueriesRanked: 5193
 #####################
 ```
 
+Note that the above command uses `-format msmarco` to directly generate a run in the MS MARCO output format.
+
 To generate an MS MARCO submission with the BM25 tuned parameters, corresponding to "BM25 (tuned)" above:
 
 ```bash
@@ -101,3 +102,5 @@ MRR @100: 0.2633426142578288
 QueriesRanked: 5193
 #####################
 ```
+
+Again, note that the above command uses `-format msmarco` to directly generate a run in the MS MARCO output format.
