Cleanup of regressions - added variable to simplify docgen

--- a/src/main/resources/docgen/templates/cw12b13.template
+++ b/src/main/resources/docgen/templates/cw12b13.template
@@ -1,8 +1,8 @@
 # Anserini: Regressions for [ClueWeb12-B13](http://lemurproject.org/clueweb12/ClueWeb12-CreateB13.php)
 
 This page describes regressions for the Web Tracks from TREC 2013 and 2014 using the [ClueWeb12-B13 collection](http://lemurproject.org/clueweb12/ClueWeb12-CreateB13.php).
-The exact configurations for these regressions are stored in [this YAML file](../src/main/resources/regression/cw12b13.yaml).
-Note that this page is automatically generated from [this template](../src/main/resources/docgen/templates/cw12b13.template) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
+The exact configurations for these regressions are stored in [this YAML file](${yaml}).
+Note that this page is automatically generated from [this template](${template}) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
 
 ## Indexing
 
