--- a/src/main/resources/docgen/templates/fire12-en.template
+++ b/src/main/resources/docgen/templates/fire12-en.template
@@ -3,8 +3,8 @@
 This page documents regression experiments for [FIRE 2012 ad hoc retrieval (Monolingual English)](https://www.isical.ac.in/~fire/2012/adhoc.html).
 The document collection can be found in [FIRE data page](http://fire.irsi.res.in/fire/static/data).
 
-The exact configurations for these regressions are stored in [this YAML file](../src/main/resources/regression/fire12-en.yaml).
-Note that this page is automatically generated from [this template](../src/main/resources/docgen/templates/fire12-en.template) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
+The exact configurations for these regressions are stored in [this YAML file](${yaml}).
+Note that this page is automatically generated from [this template](${template}) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
 
 ## Indexing
 
