--- a/src/main/resources/docgen/templates/mb11.template
+++ b/src/main/resources/docgen/templates/mb11.template
@@ -1,8 +1,8 @@
 # Anserini: Regressions for Tweets2011 (MB11 &amp; MB12)
 
 This page describes regressions for the Microblog Tracks from TREC 2011 and 2012 using the Tweets2011 collection.
-The exact configurations for these regressions are stored in [this YAML file](../src/main/resources/regression/mb11.yaml).
-Note that this page is automatically generated from [this template](../src/main/resources/docgen/templates/mb11.template) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
+The exact configurations for these regressions are stored in [this YAML file](${yaml}).
+Note that this page is automatically generated from [this template](${template}) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
 
 ## Indexing
 
