--- a/src/main/resources/docgen/templates/wt10g.template
+++ b/src/main/resources/docgen/templates/wt10g.template
@@ -1,8 +1,8 @@
 # Anserini: Regressions for [Wt10g](http://ir.dcs.gla.ac.uk/test_collections/wt10g.html)
 
 This page describes regressions for the TREC-9 Web Track and the TREC 2001 Web Track, which uses the [Wt10g collection](http://ir.dcs.gla.ac.uk/test_collections/wt10g.html).
-The exact configurations for these regressions are stored in [this YAML file](../src/main/resources/regression/wt10g.yaml).
-Note that this page is automatically generated from [this template](../src/main/resources/docgen/templates/wt10g.template) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
+The exact configurations for these regressions are stored in [this YAML file](${yaml}).
+Note that this page is automatically generated from [this template](${template}) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
 
 ## Indexing
 
