--- a/src/main/resources/docgen/templates/backgroundlinking18.template
+++ b/src/main/resources/docgen/templates/backgroundlinking18.template
@@ -1,8 +1,8 @@
 # Anserini: Regressions for [TREC 2018 Background Linking](http://trec-news.org/)
 
 This page describes regressions for the background linking task in the [TREC 2018 News Track](http://trec-news.org/).
-The exact configurations for these regressions are stored in [this YAML file](../src/main/resources/regression/backgroundlinking18.yaml).
-Note that this page is automatically generated from [this template](../src/main/resources/docgen/templates/backgroundlinking18.template) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
+The exact configurations for these regressions are stored in [this YAML file](${yaml}).
+Note that this page is automatically generated from [this template](${template}) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
 
 ## Indexing
 
