--- a/src/main/resources/docgen/templates/car17v2.0-doc2query.template
+++ b/src/main/resources/docgen/templates/car17v2.0-doc2query.template
@@ -7,8 +7,8 @@ This page documents regression experiments for the [TREC 2017 Complex Answer Ret
 These experiments are integrated into Anserini's regression testing framework.
 For more complete instructions on how to run end-to-end experiments, refer to [this page](experiments-doc2query.md).
 
-The exact configurations for these regressions are stored in [this YAML file](../src/main/resources/regression/car17v2.0-doc2query.yaml).
-Note that this page is automatically generated from [this template](../src/main/resources/docgen/templates/car17v2.0-doc2query.template) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
+The exact configurations for these regressions are stored in [this YAML file](${yaml}).
+Note that this page is automatically generated from [this template](${template}) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
 
 ## Indexing
 
