--- a/src/main/resources/docgen/templates/dl21-doc-segmented.template
+++ b/src/main/resources/docgen/templates/dl21-doc-segmented.template
@@ -14,8 +14,8 @@ Note that there are four different regression conditions for this task, and this
 + **Indexing Condition:** each segment in the MS MARCO V2 _segmented_ document collection is treated as a unit of indexing
 + **Expansion Condition:** none
 
-The exact configurations for these regressions are stored in [this YAML file](../src/main/resources/regression/dl21-doc-segmented.yaml).
-Note that this page is automatically generated from [this template](../src/main/resources/docgen/templates/dl21-doc-segmented.template) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
+The exact configurations for these regressions are stored in [this YAML file](${yaml}).
+Note that this page is automatically generated from [this template](${template}) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
 
 ## Indexing
 
