--- a/src/main/resources/docgen/templates/mb13.template
+++ b/src/main/resources/docgen/templates/mb13.template
@@ -1,8 +1,8 @@
 # Anserini: Regressions for Tweets2013 (MB13 &amp; MB14)
 
 This page describes regressions for the Microblog Tracks from TREC 2013 and 2014 using the Tweets2013 collection.
-The exact configurations for these regressions are stored in [this YAML file](../src/main/resources/regression/mb13.yaml).
-Note that this page is automatically generated from [this template](../src/main/resources/docgen/templates/mb13.template) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
+The exact configurations for these regressions are stored in [this YAML file](${yaml}).
+Note that this page is automatically generated from [this template](${template}) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
 
 ## Indexing
 
