--- a/src/main/resources/docgen/templates/msmarco-doc-per-passage.template
+++ b/src/main/resources/docgen/templates/msmarco-doc-per-passage.template
@@ -11,8 +11,8 @@ All four conditions are described in detail [here](https://github.com/castorini/
 
 **NOTE**: This is the `msmarco-doc-per-passage` variant (there's also `msmarco-doc-per-passage-v2` and `msmarco-doc-per-passage-v3`), see [this page](experiments-msmarco-doc-doc2query-details.md) for detailed notes about differences between these variants.
 
-The exact configurations for these regressions are stored in [this YAML file](../src/main/resources/regression/msmarco-doc-per-passage.yaml).
-Note that this page is automatically generated from [this template](../src/main/resources/docgen/templates/msmarco-doc-per-passage.template) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
+The exact configurations for these regressions are stored in [this YAML file](${yaml}).
+Note that this page is automatically generated from [this template](${template}) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
 
 ## Indexing
 
